--- a/literate_md/test/expected_test.html
+++ b/literate_md/test/expected_test.html
@@ -12,8 +12,8 @@
 </pre></td>
   <td class="code"><pre>&lang;*&rang;+&equiv;
 int main() { 
-  &lang;Do <span style="color:#036;font-weight:bold">Stuff&rang;</span>
-  &lang;Do <span style="color:#036;font-weight:bold">More</span> <span style="color:#036;font-weight:bold">Stuff&rang;</span>
+  &lang;Do Stuff&rang;
+  &lang;Do More Stuff&rang;
   <span style="color:#080;font-weight:bold">return</span> <span style="color:#00D">0</span>; 
 }
 </pre></td>
@@ -29,12 +29,12 @@ int main() {
 <a href="#n21" name="n21">21</a>
 <a href="#n22" name="n22">22</a>
 </pre></td>
-  <td class="code"><pre>&lang;Do <span style="color:#036;font-weight:bold">Stuff&rang;</span>+&equiv;
-int* me = &amp;<span style="color:#00D">1</span>;
-*me++;
-&lang;Do <span style="color:#036;font-weight:bold">More</span> <span style="color:#036;font-weight:bold">Stuff&rang;</span>+&equiv;
+  <td class="code"><pre>&lang;Do Stuff&rang;+&equiv;
+    int* me = &amp;<span style="color:#00D">1</span>;
+    *me++;
+&lang;Do More Stuff&rang;+&equiv;
 <span style="background-color:hsla(300,100%,50%,0.06)"><span style="color:#404">/</span><span style="color:#808">* MORE! MORE! *</span><span style="color:#404">/</span></span>
-&lang;Do <span style="color:#036;font-weight:bold">Stuff&rang;</span>+&equiv;
+&lang;Do Stuff&rang;+&equiv;
 <span style="background-color:hsla(300,100%,50%,0.06)"><span style="color:#404">/</span><span style="color:#404">/</span></span> again!
 </pre></td>
 </tr></table>
@@ -43,7 +43,7 @@ int* me = &amp;<span style="color:#00D">1</span>;
 <table class="CodeRay"><tr>
   <td class="line-numbers" title="double click to toggle" ondblclick="with (this.firstChild.style) { display = (display == '') ? 'none' : '' }"><pre><a href="#n28" name="n28">28</a>
 </pre></td>
-  <td class="code"><pre>&lang;Do <span style="color:#036;font-weight:bold">More</span> <span style="color:#036;font-weight:bold">Stuff&rang;</span>+&equiv; &lang;Do <span style="color:#036;font-weight:bold">Stuff&rang;</span>
+  <td class="code"><pre>&lang;Do More Stuff&rang;+&equiv; &lang;Do Stuff&rang;
 </pre></td>
 </tr></table>
 </body></html>
