use kramdown instead of coderay to avoid native gem issues

--- a/literate_md/test/expected_test.html
+++ b/literate_md/test/expected_test.html
@@ -1,9 +1,9 @@
 <html><body>
-<h3>my file</h3>
-
+<h3 id="my-file">my file</h3>
 <p>add some <em>text</em>:</p>
+
 <table class="CodeRay"><tr>
-  <td class="line-numbers" title="double click to toggle" ondblclick="with (this.firstChild.style) { display = (display == '') ? 'none' : '' }"><pre><a href="#n5" name="n5">5</a>
+  <td class="line-numbers"><pre><a href="#n5" name="n5">5</a>
 <a href="#n6" name="n6">6</a>
 <a href="#n7" name="n7">7</a>
 <a href="#n8" name="n8">8</a>
@@ -19,9 +19,10 @@ int main() {
 </pre></td>
 </tr></table>
 
-<p>and some more text. we should probably say what dostuff is; it&#39;s:</p>
+<p>and some more text. we should probably say what dostuff is; it’s:</p>
+
 <table class="CodeRay"><tr>
-  <td class="line-numbers" title="double click to toggle" ondblclick="with (this.firstChild.style) { display = (display == '') ? 'none' : '' }"><pre><a href="#n16" name="n16">16</a>
+  <td class="line-numbers"><pre><a href="#n16" name="n16">16</a>
 <a href="#n17" name="n17">17</a>
 <a href="#n18" name="n18">18</a>
 <a href="#n19" name="n19">19</a>
@@ -30,8 +31,8 @@ int main() {
 <a href="#n22" name="n22">22</a>
 </pre></td>
   <td class="code"><pre>&lang;Do Stuff&rang;+&equiv;
-    int* me = &amp;<span style="color:#00D">1</span>;
-    *me++;
+        int* me = &amp;<span style="color:#00D">1</span>;
+        *me++;
 &lang;Do More Stuff&rang;+&equiv;
 <span style="background-color:hsla(300,100%,50%,0.06)"><span style="color:#404">/</span><span style="color:#808">* MORE! MORE! *</span><span style="color:#404">/</span></span>
 &lang;Do Stuff&rang;+&equiv;
@@ -40,10 +41,12 @@ int main() {
 </tr></table>
 
 <p>was that clearer? More stuff is the same as the first:</p>
+
 <table class="CodeRay"><tr>
-  <td class="line-numbers" title="double click to toggle" ondblclick="with (this.firstChild.style) { display = (display == '') ? 'none' : '' }"><pre><a href="#n28" name="n28">28</a>
+  <td class="line-numbers"><pre><a href="#n28" name="n28">28</a>
 </pre></td>
   <td class="code"><pre>&lang;Do More Stuff&rang;+&equiv; &lang;Do Stuff&rang;
 </pre></td>
 </tr></table>
+
 </body></html>
